2006-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Fix memory leak.
	* common-src/tapelist.c: Fix memory leak.
	* restore-src/amidxtaped.c: Fix memory leak.
	* restore-src/restore.c: Fix memory leak.
	* server-src/amindexd.c: Fix memory leak.
	* server-src/conffile.c: Fix memory leak.
	* server-src/disk_history.c: Fix memory leak.
	* server-src/find.c: Fix memory leak.

2006-01-13  John Franks <jrfranks@zmanda.com>
	* client-src/amandad.c:      Remove SO_LINGER and TCP_NDELAY.
	                             Loop on I/O if EINTR or EAGAIN.
	* client-src/noop.c:         Loop on I/O if EINTR or EAGAIN.
	* client-src/sendbackup.c:   Remove SIGPIPE handler.
	                             Loop on I/O if EINTR or EAGAIN.
	                             Check for EPIPE on writes.
	* common-src/bsd-security.c: Loop on I/O if EINTR or EAGAIN.
	* common-src/stream.c:       Remove SO_LINGER and TCP_NDELAY.
	* common-src/util.c:         Loop on I/O if EINTR or EAGAIN.
	* recover-src/amrecover.c:   Write commanda atomically in sigint handler
	* recover-src/extract_list.c:Remove SIGPIPE handler.
	                             Loop on I/O if EINTR or EAGAIN.
	                             Check for EPIPE on writes.
	                             Remove shutdown functions.
	* restore-src/amfetchdump.c: Remove SIGPIPE handler.
	* restore-src/amidxtaped.c:  Remove SO_LINGER and TCP_NDELAY.
	                             Remove SIGPIPE handler.
	                             read_file_header does not return if it
	                             Fix infinite loop on EOF or error and
	                             fail if memory reallocation failure in
	                             get_client_line_fd.
	* restore-src/restore.c:     Remove SIGPIPE handler.
	                             Loop on I/O if EINTR or EAGAIN.
	                             Remove shutdown functions.
	                             Simplify read loop.