@@ -1,4 +1,7 @@
 2006-01-15  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/disk_history.c: Fix memory leak.
+
+2006-01-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/bsd-security.c: Fix memory leak.
 	* common-src/tapelist.c: Fix memory leak.
 	* restore-src/amidxtaped.c: Fix memory leak.
